--- a/MauiApp1/Components/Pages/Home.razor
+++ b/MauiApp1/Components/Pages/Home.razor
@@ -1,3 +1,3 @@
 ﻿@page "/"
 
-<h1><b>Sparse Distributed Representation</b> in the MAUI Application</h1>
+<h1><b>Sparse Distributed Representation</b> in MAUI Application for Cloud Computing Project</h1>
