--- a/MauiApp1/Components/Layout/NavMenu.razor
+++ b/MauiApp1/Components/Layout/NavMenu.razor
@@ -13,5 +13,10 @@
         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="config">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
+            </NavLink>
+        </div>
     </nav>
 </div>
