Upload file handeling to the Azure cloud storage

--- a/MauiApp1/Components/Layout/NavMenu.razor
+++ b/MauiApp1/Components/Layout/NavMenu.razor
@@ -18,5 +18,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="uploadcsv">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Upload CSV
+            </NavLink>
+        </div>
     </nav>
 </div>
