--- a/MauiApp1/Components/Layout/NavMenu.razor
+++ b/MauiApp1/Components/Layout/NavMenu.razor
@@ -23,5 +23,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Upload CSV
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="generatechart">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Generate Chart
+            </NavLink>
+        </div>
     </nav>
 </div>
