--- a/MauiApp1/Components/Pages/ConfigPage.razor
+++ b/MauiApp1/Components/Pages/ConfigPage.razor
@@ -26,7 +26,7 @@
         <label>Image Container Name</label>
         <InputText @bind-Value="configModel.ImageContainerName" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Save Configuration</button>
+    <button type="submit" class="btn btn-primary mt-3">Save Configuration</button>
 </EditForm>
 
 @code {
