--- a/MauiApp1/Components/Layout/NavMenu.razor
+++ b/MauiApp1/Components/Layout/NavMenu.razor
@@ -10,22 +10,32 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="heatmap">
-        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door" aria-hidden="true"></span> Generate Chart Locally
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="config">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
+                <span class="bi bi-gear" aria-hidden="true"></span> Azure Connection
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="chartconfiguration">
+                <span class="bi bi-sliders" aria-hidden="true"></span> Chart Configuration
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="listeningmode">
+                <span class="bi bi-arrow-left-right" aria-hidden="true"></span> Listening Mode
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="uploadcsv">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Upload CSV
+                <span class="bi bi-cloud-upload" aria-hidden="true"></span> Upload CSV
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="generatechart">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Generate Chart
+                <span class="bi bi-bar-chart" aria-hidden="true"></span> Generate Chart
             </NavLink>
         </div>
     </nav>
